--- a/source/sass/schedule.scss
+++ b/source/sass/schedule.scss
@@ -18,27 +18,33 @@
 .vis-time-container {
   position: relative;
   width: 100%;
-  height: 16px;
-  background-color: #616161;
-  border-top: 1px solid #eee;
+  height: 20px;
+  // background-color: #616161;
+  border-top: 1px solid #B7B7B7;
 }
 
 .vis-container {
   position: relative;
   width: 100%;
-  border: 1px solid #909090;
+  // border: 1px solid #909090;
+}
+
+.vis-unit:hover {
+  background-color: #ddd;
 }
 
 .vis-unit {
+  font-family: monospace;
   position: absolute;
   display: inline-block;
   height: 100%;
-  font-size: 9px;
-  color: #fff;
-  padding: 2px;
+  font-size: 11px;
+  // color: #333;
+  padding: 4px;
   text-align: left;
+  border-left: 1px solid #B7B7B7;
 }
 
-.vis-unit:not(:last-child) {
-  border-right: 1px solid #eee;
+.vis-unit:last-child {
+  border-right: 1px solid #B7B7B7;
 }
