--- a/source/sass/schedule.scss
+++ b/source/sass/schedule.scss
@@ -1,14 +1,3 @@
-.vis-task {
-  position: absolute;
-  display: inline-block;
-  background-color: #F9F0F0;
-  border: 1px solid pink;
-  font-size: 10px;
-  padding: 0px;
-  height: 100%;
-  color: blue;
-  overflow: hidden;
-}
 
 .vis-task-container {
   width: 100%;
@@ -18,19 +7,29 @@
 .vis-time-container {
   position: relative;
   width: 100%;
-  height: 20px;
+  height: 30px;
+  margin-top: 8px;
   // background-color: #616161;
-  border-top: 1px solid #B7B7B7;
 }
 
 .vis-container {
   position: relative;
   width: 100%;
+  overflow-x: auto;
   // border: 1px solid #909090;
 }
 
-.vis-unit:hover {
-  background-color: #ddd;
+.vis-task {
+  position: absolute;
+  display: inline-block;
+  background-color: #F9F0F0;
+  border: 1px solid pink;
+  font-size: 12px;
+  padding: 4px;
+  height: 100%;
+  color: #B35958;
+  font-weight: bold;
+  overflow: hidden;
 }
 
 .vis-unit {
@@ -43,8 +42,13 @@
   padding: 4px;
   text-align: left;
   border-left: 1px solid #B7B7B7;
+  border-top: 1px solid #B7B7B7;
 }
 
 .vis-unit:last-child {
   border-right: 1px solid #B7B7B7;
+}
+
+.vis-unit:hover {
+  background-color: #ddd;
 }
