--- a/source/sass/schedule.scss
+++ b/source/sass/schedule.scss
@@ -27,7 +27,7 @@
   font-size: 12px;
   padding: 4px;
   height: 100%;
-  color: #B35958;
+  color: #333;
   font-weight: bold;
   overflow: hidden;
 }
